# type-algebra

./: CHANGELOG.md  LICENSE  README.md  shell.nix  type-algebra.cabal
src/: TypeAlgebra.hs
src/TypeAlgebra/: Algebra.hs  Pretty.hs  Rewrites.hs  Rules.hs
test/: Main.hs
